--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio_2",
+  "homepage": "https://leonardo-villagran/.github.io/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
