--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "react-hook-form": "^7.50.0",
     "react-router-dom": "^6.22.0",
     "react-social-icons": "^6.10.0",
-    "react-vertical-timeline-component": "^3.6.0",
-    "serve": "^14.2.1"
+    "serve": "^14.2.1",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
