--- a/json/projects_en.json
+++ b/json/projects_en.json
@@ -160,7 +160,33 @@
                 "Json",
                 "Netlify"
             ]
-        },
+        },{
+            "image": "images/projects/portfolio.jpg",
+            "title": "Portfolio - Web App",
+            "bodyText": [
+            "Personal portfolio in English and/or Spanish.",
+            "Frontend developed in React-Vite.",
+            "Customizable through JSON files.",
+            "App deployed on Github Pages."
+            ],
+            "links": [
+            {
+            "text": "GitHub",
+            "href": "https://github.com/Leonardo-villagran/portfolio"
+            },
+            {
+            "text": "Live",
+            "href": "https://leonardo-villagran.github.io/portfolio/"
+            }
+            ],
+            "tags": [
+            "React",
+            "Vite",
+            "JSON",
+            "Github Pages"
+            ]
+            },
+        
         {
             "image": "images/projects/pokemon.jpg",
             "title": "Frontend PokeApi - Web App",
