project json fixed

--- a/public/json/projects.json
+++ b/public/json/projects.json
@@ -203,7 +203,7 @@
             "tags": [
                 "Docker",
                 "Docker Compose",
-                "PostgresSQL"
+                "PostgreSQL"
             ]
         },
         {
