--- a/public/json/projects.json
+++ b/public/json/projects.json
@@ -160,7 +160,8 @@
                 "Json",
                 "Netlify"
             ]
-        },{
+        },
+        {
             "image": "images/projects/portfolio.jpg",
             "title": "Portafolio - Web App",
             "bodyText": [
@@ -191,7 +192,7 @@
             "title": "PostgreSQL desde Docker",
             "bodyText": [
                 "Docker Compose de PostgreSQL.",
-                "Permite levantar un servidor de PostgreSQL.",
+                "Permite ejecutar un servidor de PostgreSQL.",
                 "Se puede personalizar la configuración desde docker-compose.yml y las variables de entorno."
             ],
             "links": [
@@ -204,6 +205,26 @@
                 "Docker",
                 "Docker Compose",
                 "PostgreSQL"
+            ]
+        },
+        {
+            "image": "images/projects/mongodb.jpg",
+            "title": "MongoDB desde Docker",
+            "bodyText": [
+                "Docker Compose de MongoDB.",
+                "Permite ejecutar un servidor de MongoDB.",
+                "Se puede personalizar la configuración desde docker-compose.yml y las variables de entorno."
+            ],
+            "links": [
+                {
+                    "text": "GitHub",
+                    "href": "https://github.com/Leonardo-villagran/mongodb_normal"
+                }
+            ],
+            "tags": [
+                "Docker",
+                "Docker Compose",
+                "MongoDB"
             ]
         },
         {
