--- a/public/json/projects.json
+++ b/public/json/projects.json
@@ -168,7 +168,7 @@
                 "Portafolio personal en inglés y/o español.",
                 "Frontend desarrollado en React-Vite.",
                 "Permite personalizar a través de archivos json.",
-                "App implementada en Github Pages."
+                "App implementada en Netlify y Render.com."
             ],
             "links": [
                 {
@@ -177,14 +177,15 @@
                 },
                 {
                     "text": "Live",
-                    "href": "https://leonardo-villagran.github.io/portfolio/"
+                    "href": "https://leonardo-villagran-portfolio.netlify.app"
                 }
             ],
             "tags": [
                 "React",
                 "Vite",
                 "Json",
-                "Github Pages"
+                "Netlify",
+                "Render.com"
             ]
         },
         {
